--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ En aquest espai web podreu trobar una breu aproximació a la vida i obra del cin
     Dragon Tattoo" (2011), remake de la pel·lícula sueca "Els homes que no estimaven a les dones" basada en les 
     novel·les Millenium de Stieg Larson .</p>
 
-<img src= "/img"
+<img src= "Tasca-02/img/David-Fincher b&n.jpg" alt= David Fincher>
 
 
 <h3>Filmografia completa:</h3>
