--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ En aquest espai web podreu trobar una breu aproximació a la vida i obra del cin
     novel·les Millenium de Stieg Larson .</p>
 
 <img src= "Tasca-02/img/David-Fincher bn.jpg" alt="David Fincher">
-
+<img src= "https://github.com/miquelpeixet/Tasca-02/blob/exercici/img/David-Fincher%20bn.jpg" alt="David Fincher bn">
 
 <h3>Filmografia completa:</h3>
 <p>A la taula següent podem veure la filmografia completa del director, on únicament s'inclouen les pel·lícules, 
