--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ En aquest espai web podreu trobar una breu aproximació a la vida i obra del cin
 
 <h1>David Fincher</h1>
 <h2>Una mirada a la seva vida i obra</h2>
-<h3>Introducció</h3>
+<h3>Introducció:</h3>
 <p>David Andrew Leo Fincher (28 d'agost de 1962, Denver, Colorado) és un director i productor estatunidenc
     que ha desenvolupat la seva tasca professional en cinema, televisió i, especialment en els seus inicis, 
     també en el món dels vídeos musicals.
@@ -22,7 +22,7 @@ En aquest espai web podreu trobar una breu aproximació a la vida i obra del cin
     <p>Les seves pel·lícules més conegudes són, a part de les mencionades, "Seven" (també escrita com "Se7en") (1995), 
     "El Club de la Lluita" (1999) que està basada en la novel·la homònima de Chuck Palahniuk o "The Girl with the 
     Dragon Tattoo" (2011), remake de la pel·lícula sueca "Els homes que no estimaven a les dones" basada en les 
-    novel·les Millenium de Stieg Larson .</p>
+    novel·les Millenium de Stieg Larson.</p>
 
 <img src= "Tasca-02/img/David-Fincher bn.jpg" alt="David Fincher">
 
