--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <title>David Fincher</title>
-En aquest espai web podreu trobar una breu aproximació a la vida i obra del cineasta David Fincher, amb especial menció a la seva filmografia
-</head>
+En aquest espai web podreu trobar una breu aproximació a la vida i obra del cineasta David Fincher, amb especial menció a la seva filmografia</head>
 <body>
 
 <h1>David Fincher</h1>
@@ -23,9 +22,7 @@ En aquest espai web podreu trobar una breu aproximació a la vida i obra del cin
     "El Club de la Lluita" (1999) que està basada en la novel·la homònima de Chuck Palahniuk o "The Girl with the 
     Dragon Tattoo" (2011), remake de la pel·lícula sueca "Els homes que no estimaven a les dones" basada en les 
     novel·les Millenium de Stieg Larson.</p>
-
 <img src="Tasca-02/img/David-Fincher.jpg" alt="David Fincher">
-    
 <h3>Filmografia completa:</h3>
 <p>A la taula següent podem veure la filmografia completa del director, on únicament s'inclouen les pel·lícules, 
     descartant obres realitzades per altres mitjans.
