--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>David Fincher</title>
-En aquest espai web podreu trobar una breu aproximació a la vida i obra del cineasta David Fincher, amb especial menció a la seva filmografia</head>
-<body>
+En aquest espai web podreu trobar una breu aproximació a la vida i obra del cineasta David Fincher, amb especial menció a la seva filmografia</head><body>
+
 
 <h1>David Fincher</h1>
 <h2>Una mirada a la seva vida i obra</h2>
