--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>David Fincher</title>
-En aquest espai web podreu trobar una breu aproximació a la vida i obra del cineasta David Fincher, amb especial menció a la seva filmografia</head>
+En aquest espai web podreu trobar una breu aproximació a la vida i obra del cineasta David Fincher, amb especial menció a la seva filmografia
 <body>
 
 
