--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ En aquest espai web podreu trobar una breu aproximació a la vida i obra del cin
     Dragon Tattoo" (2011), remake de la pel·lícula sueca "Els homes que no estimaven a les dones" basada en les 
     novel·les Millenium de Stieg Larson.</p>
 <p><img src="Tasca-02/img/David-Fincher.jpg" alt="David Fincher"></p>
-    <h3>Filmografia completa:</h3>
+<h3>Filmografia completa:</h3>
 <p>A la taula següent podem veure la filmografia completa del director, on únicament s'inclouen les pel·lícules, 
     descartant obres realitzades per altres mitjans.
 </p>
@@ -87,11 +87,11 @@ En aquest espai web podreu trobar una breu aproximació a la vida i obra del cin
 
     <li><a href="https://es.wikipedia.org/wiki/David_Fincher">Wikipedia</a></li>
     <li><a href="http://fincherfanatic.blogspot.com.es">Blog de fans</a></li>
-    <li><a href="https://www.filmaffinity.com/es/search.php?stype=director&stext=david+fincher ">David Fincher a Film Affinity</a></li>
+    <a href="https://www.filmaffinity.com/es/search.php?stype=director&stext=david+fincher ">David Fincher a Film Affinity</a></li>
     <ul></ul>
     
       </body>
       </html>
 
-</body>
+
 </html>
