--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ En aquest espai web podreu trobar una breu aproximació a la vida i obra del cin
 
     <li><a href="https://es.wikipedia.org/wiki/David_Fincher">Wikipedia</a></li>
     <li><a href="http://fincherfanatic.blogspot.com.es">Blog de fans</a></li>
-    <a href="https://www.filmaffinity.com/es/search.php?stype=director&stext=david+fincher ">David Fincher a Film Affinity</a>
+    <li><a href="https://www.filmaffinity.com/es/search.php?stype=director&stext=david+fincher ">David Fincher a Film Affinity</a></li>
     <ul></ul>
     
       </body>
