--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ En aquest espai web podreu trobar una breu aproximació a la vida i obra del cin
     Dragon Tattoo" (2011), remake de la pel·lícula sueca "Els homes que no estimaven a les dones" basada en les 
     novel·les Millenium de Stieg Larson.</p>
     
-<p><img src="Tasca-02/img/David-Fincher.jpg" alt="David Fincher"></p>
+<img src="Tasca-02/img/David-Fincher bn.jpg" alt="David Fincher">
 
     <h3>Filmografia completa:</h3>
 <p>A la taula següent podem veure la filmografia completa del director, on únicament s'inclouen les pel·lícules, 
