--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>David Fincher</title>
-En aquest espai web podreu trobar una breu aproximació a la vida i obra del cineasta David Fincher, amb especial menció a la seva filmografia
+<meta name="description" content= "En aquest espai web podreu trobar una breu aproximació a la vida i obra del cineasta David Fincher, amb especial menció a la seva filmografi"/>
+</head>
 
 <h1>David Fincher</h1>
 <h2>Una mirada a la seva vida i obra</h2>
@@ -22,7 +23,7 @@ En aquest espai web podreu trobar una breu aproximació a la vida i obra del cin
     Dragon Tattoo" (2011), remake de la pel·lícula sueca "Els homes que no estimaven a les dones" basada en les 
     novel·les Millenium de Stieg Larson.</p>
     
-<img src="Tasca-02/img/David-Fincher bn.jpg" alt="David Fincher">
+<img src="img/David-Fincher bn.jpg" alt="David Fincher">
 
     <h3>Filmografia completa:</h3>
 <p>A la taula següent podem veure la filmografia completa del director, on únicament s'inclouen les pel·lícules, 
