--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     Dragon Tattoo" (2011), remake de la pel·lícula sueca "Els homes que no estimaven a les dones" basada en les 
     novel·les Millenium de Stieg Larson.</p>
     
-    <img src="img/David-Fincher-bn.jpg" alt="David Fincher">
+    <img src="img/David-Fincher-bn.jpg" alt="David Fincher"
     
     <h3>Filmografia completa:</h3>
     <p>A la taula següent podem veure la filmografia completa del director, on únicament s'inclouen les pel·lícules, 
