--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>David Fincher</title>
+    <title>David Fincher: vida i obra del cineasta</title>
 <meta name="description" content= "Pàgina web dedicada al cineasta David Fincher. Informació sobre reconeixements, guardons rebuts i filmografia, entre altres. "/>
 </head>
 
